Landing - fixed product section clipping bug

--- a/hey-team/src/components/Landing/landing.css
+++ b/hey-team/src/components/Landing/landing.css
@@ -133,7 +133,7 @@ html
 }
 #section-product
 {
-    margin-top: 45%;
+    margin-top: 43%;
     height: 80% !important;
     width: 100%;
 
